--- a/udqAutoApp/www/app/customer/washType/washtypeSelect.html
+++ b/udqAutoApp/www/app/customer/washType/washtypeSelect.html
@@ -3,7 +3,10 @@
         <ion-nav-buttons side="left">
             <button class="button-clear icon ion-chevron-left" ng-click="goBackOfWashType()"></button>
         </ion-nav-buttons>
-    </ion-nav-bar>
+        <ion-nav-buttons side="right">
+            <button class="button-clear icon ion-checkmark-round" ng-click="goBackOfWashType()"></button>
+        </ion-nav-buttons>
+</ion-nav-bar>
     <ion-content has-subheader="false">
         <ion-list class="input-costume">
             <ion-checkbox ng-model="types[0].check" ng-true-value="1" ng-false-value="1" class="input-costume" disabled>
