--- a/udqAutoApp/www/app/customer/order/orderMgr.html
+++ b/udqAutoApp/www/app/customer/order/orderMgr.html
@@ -71,7 +71,7 @@
 
             <button class="button-balanced button-block" ng-show="selectOrder.state==4" ng-click="judge(selectOrder)">确认</button>
         </div>
-                <button class="button-block button-energized" ng-show="selectOrder.state==5">分享</button>
+                <button class="button-block button-energized" ng-click="shareOrder()" ng-show="selectOrder.state==5">分享</button>
 
 
     </ion-content>
