--- a/udqAutoApp/www/app/customer/auto/autoAdd.html
+++ b/udqAutoApp/www/app/customer/auto/autoAdd.html
@@ -64,7 +64,7 @@
                     </div>
                 </a>
             </ion-list>
-            <button class="button button-balanced button-block" ng-click="addAuto()">确认</button>
+            <button class="allbutton button-block" ng-click="addAuto()">确认</button>
         </form>
     </ion-content>
 </ion-view>
