--- a/udqAutoApp/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/www/app/customer/member/memberInfoEdit.html
@@ -20,7 +20,7 @@
                 </ion-item>
 
             </ion-list>
-            <button class="button button-balanced button-block" ng-click="saveMemberInfo()">保存信息</button>
+            <button class="allbutton button-block" ng-click="saveMemberInfo()">保存信息</button>
         </form>
     </ion-content>
 </ion-view>
