--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -7,10 +7,17 @@
 
     <ion-content>
         <ion-list>
-            <ion-radio ng-model="order.channel" value="alipay"><h2>支付宝</h2></ion-radio>
-            <ion-radio ng-model="order.channel" value="wx"><h2>微信支付</h2></ion-radio>
+            <ion-radio ng-model="order.channel" value="alipay">
+
+                <img src="../../../image/logo/64x64.png" />
+                <h2>支付宝</h2>
+            </ion-radio>
+            <ion-radio ng-model="order.channel" value="wx">
+                <img src="../../../image/logo/icon64_appwx_logo.png" />
+                <h2>微信支付</h2>
+            </ion-radio>
         </ion-list>
         <div class="spacer" style="height:20px;"></div>
-        <button class="button button-balanced button-block" ng-click="commitOrder()">提交订单</button>
+        <button class="allbutton button-block" ng-click="commitOrder()">提交订单</button>
     </ion-content>
 </ion-view>
