--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -12,14 +12,14 @@
             <ion-slide>
                 <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
                      <a href="#">
-                         <img src="image/customerHome2.jpg" height="100%" width="100%" style="vertical-align:central;" />
+                         <img src="image/circleImg/二维码.png" height="100%" width="100%" style="vertical-align:central;" />
                      </a>
                  </div>
             </ion-slide>
             <ion-slide>
                 <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
                      <a href="#">
-                         <img src="image/customerHome2.jpg" height="100%" width="100%" style="vertical-align:central;" />
+                         <img src="image/circleImg/覆盖率.png" height="100%" width="100%" style="vertical-align:central;" />
                      </a>
                  </div>
             </ion-slide>
@@ -38,13 +38,13 @@
                         <i class="icon ion-key placeholder-icon"></i>
                         <input type="tel" placeholder="请输入手机验证码" ng-model="user.psd" class="input-costume">
                     </label>
-                    <button class="button button-energized button-small input-costume" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
+                    <button class="button button-small input-costume" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
                         {{tips}}
                     </button>
                 </div>
             </ion-list>
-            <button class="button button-balanced button-block button-small" ng-click="login()">登录</button>
-            <button class="button button-calm button-block button-small" ng-click="register()">注册</button>
+            <button class="allbutton button-block button-small" ng-click="login()">登录</button>
+            <button class="registerInloginPage  button-block button-small" ng-click="register()">注册</button>
         </form>
     </ion-content>
 
