--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -8,13 +8,12 @@
     <ion-content>
         <ion-list>
             <ion-radio ng-model="order.channel" value="alipay">
-
                 <img src="../../../image/logo/64x64.png" />
-                <h2>支付宝</h2>
+                <p>支付宝</p>
             </ion-radio>
             <ion-radio ng-model="order.channel" value="wx">
                 <img src="../../../image/logo/icon64_appwx_logo.png" />
-                <h2>微信支付</h2>
+                <p>微信支付</p>
             </ion-radio>
         </ion-list>
         <div class="spacer" style="height:20px;"></div>
