--- a/udqAutoApp/www/app/customer/auto/districtSelect.html
+++ b/udqAutoApp/www/app/customer/auto/districtSelect.html
@@ -8,9 +8,11 @@
     </ion-nav-bar>
     <ion-content has-subheader="false">
         <ion-refresher on-refresh="doRefreshOfDistrict()"></ion-refresher>
-
+        <div style="text-align:center;margin-top:5px;" ng-show="autoInfo.selectedRegionId==undefined">
+            <p>请先选择区域</p>
+        </div>
         <ion-list class="input-costume" ng-repeat="district in districts" ng-show="district.pid ==autoInfo.selectedDistrictPid" >
-            <ion-radio ng-model="autoInfo.selectedDistrictId"  ng-click="goBackOfCitySelect()" value={{district.id}} class="input-costume"><h2>{{district.name}}</h2></ion-radio>
+            <ion-radio ng-model="autoInfo.selectedDistrictId"  ng-click="goBackOfCitySelect()" value={{district.id}} class="input-costume"><p>{{district.name}}</p></ion-radio>
         </ion-list>
 
     </ion-content>
