--- a/udqAutoApp/www/app/customer/auto/regionSelect.html
+++ b/udqAutoApp/www/app/customer/auto/regionSelect.html
@@ -7,9 +7,12 @@
     </ion-nav-bar>
     <ion-content has-subheader="false">
         <ion-refresher on-refresh="doRefreshOfRegion()"></ion-refresher>
+        <div style="text-align:center;margin-top:5px;" ng-show="autoInfo.selectedCityId==undefined">
+            <p>请先选择城市</p>
+        </div>
 
         <ion-list class="input-costume" ng-repeat="region in regions"  ng-show="region.pid ==autoInfo.selectedRegionPid" >
-            <ion-radio ng-model="autoInfo.selectedRegionId"  ng-click="goBackOfCitySelect()" value={{region.id}} class="input-costume"><h2>{{region.name}}</h2></ion-radio>
+            <ion-radio ng-model="autoInfo.selectedRegionId"  ng-click="goBackOfCitySelect()" value={{region.id}} class="input-costume"><p>{{region.name}}</p></ion-radio>
         </ion-list>
 
     </ion-content>
