--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -3,6 +3,9 @@
         <ion-nav-buttons side="left">
             <button class="button-clear icon ion-chevron-left" ng-click="goBack()"></button>
         </ion-nav-buttons>
+        <ion-nav-buttons side="right">
+            <button class="button-clear" ng-click="exitCurrentUser()" style="color:#ffbc01;font-weight:600;">注销</button>
+        </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content padding="true" class="has-header">
         <form>
