--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -37,6 +37,7 @@
     <script src="app/customer/register/registerCtrl.js"></script>
     <script src="app/customer/register/registerSvr.js"></script>
     <script src="app/customer/washType/washtypeCtrl.js"></script>
+    <script src="app/util/networkInfoSvr.js"></script>
 
     <script src="app/login/loginCtrl.js"></script>
     <script src="app/login/loginSvr.js"></script>
